tests/files/flow_controller_tests/should_run/113.cmdr
x = 8;
print arccoth(x);