tests/files/flow_controller_tests/should_fail/110.cmdr
x = "cat";
print arccoth(x);